Add new data files

--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,7 @@ dmypy.json
 # Drift Simulator
 checkpoints/*
 !checkpoints/heuristic
-!checkpoints/qlearning_1000
-!checkpoints/qlearning_7500
-!checkpoints/sarsa_1000
+!checkpoints/qlearning_0.1_q_1000
+!checkpoints/qlearning_0.5_q_7200
+!checkpoints/sarsa_0.1_q_1000
+!checkpoints/sarsa_0.5_q_7200
